force-app/main/default/objects/AdditionalChargeCredit__c/AdditionalChargeCredit__c.object-meta.xml
<CustomObject>
    <description>Related object that functions as an auxiliary Product catalog. Good for charge lines, such Shipping &amp; Handling Fee</description>
    <label>Additional Charge and Credit</label>
    <nameField>
        <label>Additional Charge/Credit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Charges and Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>