force-app/main/default/objects/AdditionalChargeCredit__c/fields/DefaultLineDescription__c.field-meta.xml
<CustomField>
    <fullName>DefaultLineDescription__c</fullName>
    <description>Sets the initial Line Description text in Quote and Order configurator page.</description>
    <inlineHelpText>Sets the initial Line Description text in Quote and Order configurator page</inlineHelpText>
    <label>Default Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>