force-app/main/default/objects/AdditionalChargeCredit__c/fields/DefaultQuantity__c.field-meta.xml
<CustomField>
    <fullName>DefaultQuantity__c</fullName>
    <description>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1.</description>
    <inlineHelpText>Sets the initial Quantity value in Quote and Order configurator page. If blank, the Default Quantity is 1</inlineHelpText>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>