force-app/main/default/objects/AdditionalChargeCredit__c/fields/Discount_SKU__c.field-meta.xml
<CustomField>
    <fullName>Discount_SKU__c</fullName>
    <label>Discount SKU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>