force-app/main/default/objects/AdditionalChargeCredit__c/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hides Product in Quote and Order Configurator. Useful to prevent new sales of the Product, while allowing existing sales.</description>
    <inlineHelpText>Hides Product in Quote and Order Configurator. Useful to prevent new sales of the Product, while allowing existing sales</inlineHelpText>
    <label>Hide</label>
    <type>Checkbox</type>
</CustomField>