force-app/main/default/objects/AdditionalChargeCredit__c/fields/LockLineDescription__c.field-meta.xml
<CustomField>
    <fullName>LockLineDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level.</description>
    <inlineHelpText>Prevents Line Description to be editable in Quote and Order configurator page. Does not lock the Line Description at the record level</inlineHelpText>
    <label>Lock Line Description</label>
    <type>Checkbox</type>
</CustomField>