force-app/main/default/objects/AdditionalChargeCredit__c/fields/LockQuantity__c.field-meta.xml
<CustomField>
    <fullName>LockQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level.</description>
    <inlineHelpText>Prevents Quantity to be editable in Quote and Order configurator page. Does not lock the Quantity at the record level</inlineHelpText>
    <label>Lock Quantity</label>
    <type>Checkbox</type>
</CustomField>