force-app/main/default/objects/AdditionalChargeCredit__c/fields/LockUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>LockUnitPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents Unit Price to be editable in Quote and Order configurator page. Does not lock the Unit Price at the record level.</description>
    <inlineHelpText>Prevents Unit Price to be editable in Quote and Order configurator page. Does not lock the Unit Price at the record level</inlineHelpText>
    <label>Lock Unit Price</label>
    <type>Checkbox</type>
</CustomField>