force-app/main/default/objects/AdditionalChargeCredit__c/fields/MaximumQuantity__c.field-meta.xml
<CustomField>
    <fullName>MaximumQuantity__c</fullName>
    <description>Sets the maximum Quantity value limit in Quote and Order configurator page.</description>
    <inlineHelpText>Sets the maximum Quantity value limit in Quote and Order configurator page</inlineHelpText>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>