force-app/main/default/objects/AdditionalChargeCredit__c/fields/MinimumQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinimumQuantity__c</fullName>
    <description>Sets the minimum Quantity value limit in Quote and Order configurator page.</description>
    <inlineHelpText>Sets the minimum Quantity value limit in Quote and Order configurator page</inlineHelpText>
    <label>Minimum Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>