force-app/main/default/objects/AdditionalChargeCredit__c/fields/OpportunitySyncProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySyncProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference Product used in Syncing to Opportunity Products

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled. If Product is used only for Syncing purpose, best to set Product &apos;Hide&apos; to Checked.</description>
    <inlineHelpText>Reference Product used in Syncing to Opportunity Products

Applicable to Primary Quotes or Orders with Opportunity Lines Sync enabled. If Product is used only for Syncing purpose, best to set Product &apos;Hide&apos; to Checked</inlineHelpText>
    <label>Opportunity Sync Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Additional_Charges_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>