force-app/main/default/objects/AdditionalChargeCredit__c/fields/QuantityScale__c.field-meta.xml
<CustomField>
    <fullName>QuantityScale__c</fullName>
    <description>Sets the Quantity decimal support in Quote and Order configurator page.</description>
    <inlineHelpText>Sets the Quantity decimal support in Quote and Order configurator page</inlineHelpText>
    <label>Quantity Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>kugo2p__Scale</valueSetName>
    </valueSet>
</CustomField>