force-app/main/default/objects/AdditionalChargeCredit__c/fields/TaxableSales__c.field-meta.xml
<CustomField>
    <fullName>TaxableSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxable Sales</label>
    <type>Checkbox</type>
</CustomField>