force-app/main/default/objects/AdditionalChargeCredit__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT/GST</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipName>Additional_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>