force-app/main/default/objects/AdditionalChargeCredit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Description__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>SKU__c</columns>
    <columns>Discount_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>